connect amplify with this project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: todo
 description: "A new Flutter project."
 
-publish_to: 'none' 
-
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -13,15 +12,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.8
   flutter_colorpicker: ^1.1.0
   curved_navigation_bar: ^1.0.6
   animations: ^2.0.11
   tab_indicator_styler: ^2.0.0
-  provider: ^6.1.4
   intl: ^0.20.2
   uuid: ^4.5.1
+  animate_do: ^4.2.0
+  flutter_riverpod: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -29,22 +28,11 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
 
-
 flutter:
   uses-material-design: true
 
   assets:
-    - 'assets/home.png'
-    - 'assets/add_todo.png'
-    - 'assets/finance.jpg'
-    - 'assets/Career.jpg'
-    - 'assets/Health.jpg'
-    - 'assets/Leisure.jpg'
-    - 'assets/Office.jpg'
-    - 'assets/Home.jpg'
-    - 'assets/Personal.jpg'
-    - 'assets/Self_Development.jpg'
-    - 'assets/Fun.jpg'
-  
-   
-
+    - "assets/background.png"
+    - "assets/clock.png"
+    - "assets/light-1.png"
+    - "assets/light-2.png"
